# paragraphe_ranker

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  setup.py
books/pdf/: Myxomycetes_A_Handbook_of_Slime_Molds_Steven_L._Stephenson_Henry_Stempen_Z-Library.epub
output/: paragraphe_Myxomycetes_A_Handbook_of_Slime_Molds_Steven_L._Stephenson_Henry_Stempen_Z-Library.epub.txt  paragraphe_Myxomycetes_biology_systematics_biogeography_and_ecology_Elsevier_Rojas_CarlosStephenson_Steven_L_Z_Library.pdf.txt  paragraphe_medium_sentence_to_paragraph.pdf.txt
prg/: __init__.py  config.py  embedding_split.py  file_reader.py  plot.py  simple.py  text_2_paragraphes.py
src/: config.py  embedding_split.py  file_reader.py  plot.py  utils.py
