[tool.poetry]
name = "paragraphe-ranker"
version = "0.1.0"
description = ""
authors = ["Aaramis <auguste.gardette@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.35.2"
accelerate = "^0.25.0"
datasets = "^2.15.0"
sentence-transformers = "^2.2.2"
sentencepiece = "^0.1.99"
openai = "^1.3.7"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
